[package]
name = "chip8_vm"
version = "0.1.0"
authors = ["Joel Larson"]
edition = "2021"
description = "Chip8 interpreter written in Rust with a focus on accuracy."
readme = true
repository = "https://github.com/djwormlight/chip8_interpreter"
license-file = "UNLICENSE"
keywords = ["chip8"]

[dependencies]
softbuffer = "0.4.6"
winit = "0.30.8"